--- a/.gitignore
+++ b/.gitignore
@@ -1,74 +1,102 @@
-#########################################
-# https://github.com/github/gitignore/blob/master/Ruby.gitignore
-#########################################
+
+# Created by https://www.gitignore.io/api/ruby,osx,linux,windows
+
+### Ruby ###
 *.gem
 *.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-
-#########################################
-# https://raw2.github.com/github/gitignore/master/Rails.gitignore
-#########################################
-*.rbc
-*.sassc
-.sass-cache
-capybara-*.html
-.rspec
-/log
-/tmp
-/db/*.sqlite3
-/public/system
+/.config
 /coverage/
-/spec/tmp
-**.orig
-rerun.txt
-pickle-email-*.html
-config/secrets.yml
+/InstalledFiles
+/pkg/
+/spec/reports/
+/spec/examples.txt
+/test/tmp/
+/test/version_tmp/
+/tmp/
 
-## Environment normalisation:
-/.bundle
+## Specific to RubyMotion:
+.dat*
+.repl_history
+build/
+
+## Documentation cache and generated files:
+/.yardoc/
+/_yardoc/
+/doc/
+/rdoc/
+
+## Environment normalization:
+/.bundle/
 /vendor/bundle
+/lib/bundler/man/
 
-# these should all be checked in to normalise the environment:
-# Gemfile.lock, .ruby-version, .ruby-gemset
+# for a library or gem, you might want to ignore these files since the code is
+# intended to run in multiple environments; otherwise, check them in:
+# Gemfile.lock
+# .ruby-version
+# .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
-#########################################
-# Extras, not from github
-#########################################
-.env
+
+### OSX ###
 .DS_Store
-Desktop.ini
-Thumbs.db
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
 .Spotlight-V100
+.TemporaryItems
 .Trashes
-/log/*.log
+.VolumeIcon.icns
 
-# Emacs temp files
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
+### Linux ###
 *~
-*#*
 
-# Ctags
-TAGS
-tags
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
 
-# VI temp files
-*.swp
-*.swo
-*.log
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
